--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^2.9.1",
+    "enzyme-to-json": "^1.5.1",
+    "nock": "^9.0.14",
+    "node-fetch": "^1.7.2",
+    "react-test-renderer": "^15.6.1"
   }
 }
